# purchase_of_goods

./: Dockerfile  pyproject.toml
app/: models.py
