[tool.poetry]
name = "purchase-of-goods"
version = "0.1.0"
description = ""
authors = ["Никита Шидогубов <nikita.sh@gklifts.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.2"}
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
databases = "^0.9.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
coverage = "^7.6.1"
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
